Changing to hepthesis template

--- a/Hhh/Hhh.tex
+++ b/Hhh/Hhh.tex
@@ -1,20 +1,20 @@
-\chapter{\texorpdfstring{Search for \hhhtautaubb}{Search for H -> hh -> tautaubb}}
+\chapter{\texorpdfstring{Search for \Htohhtobbtautau}{Search for H -> hh -> bbtautau}}
 \label{sec:hhh}
 
 In this chapter the search for a heavy Higgs boson decaying to a pair of 125 GeV Higgs bosons, with one of these Higgs bosons decaying to 
-a pair of b-jets and the other decaying to a pair of $\tau$ leptons is discussed. The results of this search are model-independent
+a pair of b-jets and the other decaying to a pair of \Ptau leptons is discussed. The results of this search are model-independent
 upper limits on heavy Higgs production cross--section times branching ratio into h(125)h(125)$\rightarrow b\bar{b} \tau\tau$. In addition 
 the results are interpreted in the context of the MSSM and a type-II Two Higgs Doublet Model (2HDM), these interpretations are made
-in combination with the results of a search for \azhlltautau. This search will be summarised in this
+in combination with the results of a search for \AtoZhtolltautau. This search will be summarised in this
 chapter, but will not constitute the main focus.
 
 The discovery of the 125 GeV Higgs boson by the ATLAS and CMS collaborations in 2012 (CITATION) has opened up
 new possibilities for probing the Higgs sector beyond the Standard Model. In some MSSM scenarios, and some more
 generic type-II 2HDM's, a heavy neutral Higgs boson H can decay to a pair of 125 GeV Higgs bosons for low values
 of \tanb, probing a region of phase space not yet excluded by stringent existing limits. In regions where
-the decay \hhh is enhanced, the \azh decay also has a large branching ratio, indicating the usefulness
+the decay \Htohh is enhanced, the \AtoZh decay also has a large branching ratio, indicating the usefulness
 of both channels for probing the low-\tanb region. The $b\bar{b}$\tautau final state is chosen for the combination
-of the large $h(125) \rightarrow b\bar{b}$ branching ratio and the cleaner \htautau final state.
+of the large $h(125) \rightarrow b\bar{b}$ branching ratio and the cleaner \htotautau final state.
 
 BLAH BLAH BLAH
 
@@ -23,13 +23,13 @@ BLAH BLAH BLAH
 The dataset used for this analysis corresponds to the full dataset collected by the CMS experiment during the 2012 $p-p$ 
 running period of the LHC. 
 Signal and background events were generated using several different MC event generators. The \texttt{MadGraph}
-CITATION matrix element generator was used to generate samples of \wjets, \zellell, \ttbar and $ZZ$,$ZW$ and $WW$
+CITATION matrix element generator was used to generate samples of \Wjets, \Zellell, \ttbar and \ZZ ,\WZ and \WW
 events. In addition to samples with a mixture of jet multiplicities ('inclusive' samples), samples binned in jet multiplicity
-were used for the \wjets and \zellell backgrounds. This increases the number of background events
+were used for the \Wjets and \Zellell backgrounds. This increases the number of background events
 in signal regions with multiple jets. The samples binned in jet multiplicity are combined with the
 inclusive samples such that the fraction of events with each jet multiplicity is preserved.
 
-Single top samples were produced with the \texttt{POWHEG} CITATION generator. Samples of $gg\rightarrow$\hhhtautaubb
+Single top samples were produced with the \texttt{POWHEG} CITATION generator. Samples of $gg\rightarrow$\Htohhtobbtautau
 were generated in steps of 10 GeV between $m_H = 260 - 350$~GeV using \texttt{PYTHIA 6} CITATION. In all of the samples
 \texttt{TAUOLA} CITATION is used to decay $\tau$s, and parton showering and hadronisation are modelled using \texttt{PYTHIA 6}.
 Minimum bias events generated using \texttt{PYTHIA 6} are added to all MC samples to model additional
@@ -51,7 +51,7 @@ interactions.
 \section{Systematic uncertainties}
 \label{sec:hhh_uncs}
 
-\section{\texorpdfstring{Overview of \azhlltautau}{Overview of A->Zh->lltautau}}
+\section{\texorpdfstring{Overview of \AtoZhtolltautau}{Overview of A->Zh->lltautau}}
 \label{sec:hhh_azh}
 
 \section{Results}
