--- a/thesis.tex
+++ b/thesis.tex
@@ -1,199 +1,68 @@
-\documentclass[twoside,11pt]{Latex/Classes/PhDthesisPSnPDF}
-\include{Latex/Macros/MacroFile1}
+%% For normal draft builds (figs undisplayed hence fast compile)
+%\documentclass[hyperpdf,nobind,draft,oneside]{hepthesis}
+%\documentclass[hyperpdf,nobind,draft,twoside]{hepthesis}
+
+%% For short draft builds (breaks citations by necessity)
+%\documentclass[hyperpdf,nobind,draft,hidefrontback]{hepthesis}
+
+%%For Cambridge soft-bound version
+\documentclass[hyperpdf,bindnopdf]{hepthesis}
+%% For Cambridge hard-bound version (must be one-sided)
+%\documentclass[hyperpdf,oneside]{hepthesis}
+
+%% Load special font packages here if you wish
+%\usepackage{lmodern}
+%\usepackage{mathpazo}
+%\usepackage{euler}
+
+%% Put package includes etc. into preamble.tex for convenience
+\input{preamble}
+
+%% You can set the line spacing this way
+%\setallspacing{double}
+%% or a section at a time like this
+%\setfrontmatterspacing{double}
 
 
+%% Define the thesis title and author
+\title{Searches for neutral Higgs bosons in final states with two $\tau$ leptons using the CMS detector}
+\author{Adinda de Wit}
 
-%: ----------------------------------------------------------------------
-%:                  TITLE PAGE: name, degree,..
-% ----------------------------------------------------------------------
-\ifpdf  
-    \pdfinfo { /Title  (PhD and MPhil Thesis Classes)
-               /Creator (TeX)
-               /Producer (pdfTeX)
-               /Author (YourName your@email.net)
-               /CreationDate (D:YYYYMMDDhhmmss)  %format D:YYYYMMDDhhmmss
-               /ModDate (D:YYYYMMDDhhmm)
-               /Subject (xyz)
-               /Keywords (add, your, keywords, here) }
-    \pdfcatalog { /PageMode (/UseOutlines)
-                  /OpenAction (fitbh)  }
-\fi
+%% Doc-specific PDF metadata
+\makeatletter
+\@ifpackageloaded{hyperref}{%
+\hypersetup{%
+  pdftitle = {Searches for neutral Higgs bosons in final states with two $\tau$ leptons using the CMS detector},
+  pdfsubject = {Adinda de Wit's PhD thesis},
+  pdfkeywords = {CMS, physics, LHC, tau, Higgs},
+  pdfauthor = {\textcopyright\ Adinda de Wit}
+}}{}
+\makeatother
 
 
-\title{Searches for neutral Higgs bosons in final states with two $\tau$-leptons using the CMS detector}
-
-
-
-% ----------------------------------------------------------------------
-% The section below defines www links/email for author and institutions
-% They will appear on the title page of the PDF and can be clicked
-\ifpdf
-  \author{\href{mailto:adinda.de-wit12@imperial.ac.uk}{Adinda de Wit}}
-  \collegeordept{\href{http://www.something.net}{Department of Physics}}
-  \university{\href{http://www.something.net}{Imperial College London}}
-
-  % The crest is a graphics file of the logo of your research institution.
-  % Place it in ./0_frontmatter/figures and specify the width
-  % \crest{\includegraphics[width=4cm]{logo}}
-  
-% If you are not creating a PDF then use the following. The default is PDF.
-\else
-  \author{YourName}
-%  \cityofbirth{born in XYZ}
-  \collegeordept{CollegeOrDept}
-  \university{University}
-  \crest{\includegraphics[width=4cm]{logo}}
-\fi
-
-\renewcommand{\submittedtext}{A thesis submitted to Imperial College London for the degree of}
-\degree{Doctor of Philosophy}
-%\degreedate{2017 03}
-
-
-% ----------------------------------------------------------------------
-       
-% turn of those nasty overfull and underfull hboxes
-\hbadness=10000
-\hfuzz=50pt
-
-
-%: --------------------------------------------------------------
-%:                  FRONT MATTER: dedications, abstract,..
-% --------------------------------------------------------------
-
+%% Start the document
 \begin{document}
 
-%\language{english}
+%% Define the un-numbered front matter (cover pages, rubrik and table of contents)
+\begin{frontmatter}
+  \input{frontmatter}
+\end{frontmatter}
 
-% sets line spacing
-\renewcommand\baselinestretch{1.2}
-\baselineskip=18pt plus1pt
+%% Start the content body of the thesis
+\begin{mainmatter}
+  \input{Hhh/hhh}
+\end{mainmatter}
 
+%% Produce the appendices
+%\begin{appendices}
+%  \input{appendices}
+%\end{appendices}
 
-%: ----------------------- generate cover page ------------------------
+%% Produce the un-numbered back matter (e.g. colophon,
+%% bibliography, tables of figures etc., index...)
+\begin{backmatter}
+  \input{backmatter}
+\end{backmatter}
 
-\maketitle  
-
-
-
-%: ----------------------- abstract ------------------------
-
-%\include{Abstract/abstract}
-
-% The original template provides and abstractseparate environment, if your institution requires them to be separate. I think it's easier to print the abstract from the complete thesis by restricting printing to the relevant page.
-% \begin{abstractseparate}
-%   \input{Abstract/abstract}
-% \end{abstractseparate}
-
-
-%: ----------------------- tie in front matter ------------------------
-
-\frontmatter
-%\include{0_frontmatter/dedication}
-%\include{0_frontmatter/acknowledgement}
-
-
-%: ----------------------- contents ------------------------
-
-\setcounter{secnumdepth}{3} % organisational level that receives a numbers
-\setcounter{tocdepth}{3}    % print table of contents for level 3
-\tableofcontents            % print the table of contents
-% levels are: 0 - chapter, 1 - section, 2 - subsection, 3 - subsection
-
-
-%: ----------------------- list of figures/tables ------------------------
-
-\listoffigures	% print list of figures
-
-\listoftables  % print list of tables
-
-
-%: ----------------------- glossary ------------------------
-
-% Tie in external source file for definitions: /0_frontmatter/glossary.tex
-% Glossary entries can also be defined in the main text. See glossary.tex
-%\include{0_frontmatter/glossary} 
-
-\begin{multicols}{2} % \begin{multicols}{#columns}[header text][space]
-\begin{footnotesize} % scriptsize(7) < footnotesize(8) < small (9) < normal (10)
-
-\printnomenclature[1.5cm] % [] = distance between entry and description
-\label{nom} % target name for links to glossary
-
-\end{footnotesize}
-\end{multicols}
-
-
-
-%: --------------------------------------------------------------
-%:                  MAIN DOCUMENT SECTION
-% --------------------------------------------------------------
-
-% the main text starts here with the introduction, 1st chapter,...
-\mainmatter
-
-\renewcommand{\chaptername}{Chapter} % uncomment to print only "1" not "Chapter 1"
-
-
-%: ----------------------- subdocuments ------------------------
-
-% Parts of the thesis are included below. Rename the files as required.
-% But take care that the paths match. You can also change the order of appearance by moving the include commands.
-
-%\include{Introduction/introduction}	% background information
-
-\include{Hhh/hhh}        % description of lab methods
-
-% --------------------------------------------------------------
-%:                  BACK MATTER: appendices, refs,..
-% --------------------------------------------------------------
-
-% the back matter: appendix and references close the thesis
-
-
-%: ----------------------- bibliography ------------------------
-
-% The section below defines how references are listed and formatted
-% The default below is 2 columns, small font, complete author names.
-% Entries are also linked back to the page number in the text and to external URL if provided in the BibTex file.
-
-% PhDbiblio-url2 = names small caps, title bold & hyperlinked, link to page 
-\begin{multicols}{2} % \begin{multicols}{ # columns}[ header text][ space]
-\begin{tiny} % tiny(5) < scriptsize(7) < footnotesize(8) < small (9)
-
-\bibliographystyle{Latex/Classes/PhDbiblio-url2} % Title is link if provided
-
-%\bibliography{bibliography/references} % adjust this to fit your BibTex file
-
-\end{tiny}
-\end{multicols}
-
-% --------------------------------------------------------------
-% Various bibliography styles exit. Replace above style as desired.
-
-% in-text refs: (1) (1; 2)
-% ref list: alphabetical; author(s) in small caps; initials last name; page(s)
-%\bibliographystyle{Latex/Classes/PhDbiblio-case} % title forced lower case
-%\bibliographystyle{Latex/Classes/PhDbiblio-bold} % title as in bibtex but bold
-%\bibliographystyle{Latex/Classes/PhDbiblio-url} % bold + www link if provided
-
-%\bibliographystyle{Latex/Classes/jmb} % calls style file jmb.bst
-% in-text refs: author (year) without brackets
-% ref list: alphabetical; author(s) in normal font; last name, initials; page(s)
-
-%\bibliographystyle{plainnat} % calls style file plainnat.bst
-% in-text refs: author (year) without brackets
-% (this works with package natbib)
-
-
-% --------------------------------------------------------------
-
-% according to Dresden med fac summary has to be at the end
-%\include{0_frontmatter/abstract}
-
-%: Declaration of originality
-%\include{9_backmatter/declaration}
-
-
-
+%% Close
 \end{document}
