Adding some things for H->hh/A->Zh

--- a/backmatter.tex
+++ b/backmatter.tex
@@ -2,8 +2,8 @@
 %% You're recommended to use the eprint-aware biblio styles which
 %% can be obtained from e.g. www.arxiv.org. The file mythesis.bib
 %% is derived from the source using the SPIRES Bibtex service.
-%\bibliographystyle{h-physrev}
-%\bibliography{mythesis}
+\bibliographystyle{lucas_unsrt}
+\bibliography{references}
 
 %% I prefer to put these tables here rather than making the
 %% front matter seemingly interminable. No-one cares, anyway!
