--- a/Hhh/Hhh.tex
+++ b/Hhh/Hhh.tex
@@ -2,11 +2,14 @@
 \label{sec:hhh}
 
 In this chapter the search for a heavy Higgs boson decaying to a pair of 125 GeV Higgs bosons, with one of these Higgs bosons decaying to 
-a pair of b-jets and the other decaying to a pair of \Ptau leptons is discussed. The results of this search are model-independent
-upper limits on heavy Higgs production cross--section times branching ratio into h(125)h(125)$\rightarrow b\bar{b} \tau\tau$. In addition 
-the results are interpreted in the context of the MSSM and a type-II Two Higgs Doublet Model (2HDM), these interpretations are made
-in combination with the results of a search for \AtoZhtolltautau. This search will be summarised in this
-chapter, but will not constitute the main focus.
+a pair of b-jets and the other decaying to a pair of \Ptau leptons is discussed. This \Pgt-pair final states studied in this analysis
+are the \etau, \mutau and \tautau channels. The results of this search are model-independent
+upper limits on heavy Higgs production cross--section times branching ratio into h(125)h(125)$\rightarrow b\bar{b} \tau\tau$, which use
+combine all three channels. The \etau and \mutau channels will be described in this chapter, the \tautau channel will not
+be covered. In addition  the results are interpreted in the context of the MSSM and a type-II Two Higgs Doublet Model (2HDM), 
+these interpretations are made in combination with the results of a search for \AtoZhtolltautau. 
+This search will be summarised in this chapter, but will not constitute the main focus.
+Both searches, and their interpretation, are detailed in reference \cite{CMS-HIG-14-034}.
 
 The discovery of the 125 GeV Higgs boson by the ATLAS and CMS collaborations in 2012 (CITATION) has opened up
 new possibilities for probing the Higgs sector beyond the Standard Model. In some MSSM scenarios, and some more
@@ -16,28 +19,27 @@ the decay \Htohh is enhanced, the \AtoZh decay also has a large branching ratio,
 of both channels for probing the low-\tanb region. The $b\bar{b}$\tautau final state is chosen for the combination
 of the large $h(125) \rightarrow b\bar{b}$ branching ratio and the cleaner \htotautau final state.
 
-BLAH BLAH BLAH
-
 \section{Datasets and Monte Carlo samples}
 \label{sec:hhh_datasets}
 The dataset used for this analysis corresponds to the full dataset collected by the CMS experiment during the 2012 $p-p$ 
 running period of the LHC. 
 Signal and background events were generated using several different MC event generators. The \texttt{MadGraph}
-CITATION matrix element generator was used to generate samples of \Wjets, \Zellell, \ttbar and \ZZ ,\WZ and \WW
+\cite{madgraph} matrix element generator was used to generate samples of \Wjets, \Zellell, \ttbar and \ZZ ,\WZ and \WW
 events. In addition to samples with a mixture of jet multiplicities ('inclusive' samples), samples binned in jet multiplicity
 were used for the \Wjets and \Zellell backgrounds. This increases the number of background events
 in signal regions with multiple jets. The samples binned in jet multiplicity are combined with the
 inclusive samples such that the fraction of events with each jet multiplicity is preserved.
 
-Single top samples were produced with the \texttt{POWHEG} CITATION generator. Samples of $gg\rightarrow$\Htohhtobbtautau
-were generated in steps of 10 GeV between $m_H = 260 - 350$~GeV using \texttt{PYTHIA 6} CITATION. In all of the samples
-\texttt{TAUOLA} CITATION is used to decay $\tau$s, and parton showering and hadronisation are modelled using \texttt{PYTHIA 6}.
+Single top samples were produced with the \texttt{POWHEG} \cite{powheg1,powheg2} generator. Samples of $gg\rightarrow$\Htohhtobbtautau
+were generated in steps of 10 GeV between $m_H = 260 - 350$~GeV using \texttt{PYTHIA 6} \cite{pythia64}. In all of the samples
+\texttt{TAUOLA} \cite{tauola} is used to decay $\tau$s, and parton showering and hadronisation are modelled using \texttt{PYTHIA 6} \cite{pythia64}.
 Minimum bias events generated using \texttt{PYTHIA 6} are added to all MC samples to model additional
 interactions. 
-\vfill
 
 \section{Event selection and categorisation}
 \label{sec:hhh_selection}
+A more detailed description of the physics objects used for this analysis is given in chapter FIXME:write object reco section
+
 
 \section{Data to Monte Carlo correction factors}
 \label{sec:hhh_datamc}
@@ -53,6 +55,40 @@ interactions.
 
 \section{\texorpdfstring{Overview of \AtoZhtolltautau}{Overview of A->Zh->lltautau}}
 \label{sec:hhh_azh}
+In this section a summary of the \AtoZhtolltautau analysis, which is combined with the 
+analysis described so far for the purposes of model interpretations, is given.
+
+The search for \AtoZhtolltautau also uses the full dataset collected by the CMS experiment during
+the 2012 $p-p$ running period of the LHC. In this search the \mumu and \ee final states of the \PZ boson
+and the \emu, \etau, \mutau and \tautau channels of the \htotautau decay, leading to a total of
+eight final states. 
+
+First the \PZ candidate is chosen as a pair of isolated electrons or muons, with opposite charge, and 
+invariant mass of the pair between 60-120 GeV. In case there is more than one possible pair, the 
+pair with invariant mass closest to the \PZ mass is chosen. The \htotautau decay is chosen by selecting
+an oppositely charged pair of isolated leptons in the four channels mentioned earlier. To ensure no overlap
+between different final states is possible, events with additional electrons or muons satisfying the
+$p_{\text{T}}$ and $\eta$ requirements are discarded.
+
+To reject some of the backgrounds from misidentified leptons and \ZZ production, a requirement is made
+on the scalar sum of the visible transverse momenta of the two $\tau$ candidates from the \htotautau decay.
+This selection changes by final state and has been chosen to optimise the analysis sensitivity to an 
+\AtoZh signal with $m_A = 220 - 350 $ GeV. Furthermore \ttbar events are discarded by rejecting
+events with at least one b-tagged jet. 
+
+Remaining backgrounds from \ZZ, triboson and \ttbar\PZ production are estimated using
+Monte Carlo samples. Backgrounds from \PZ+jets %($\ell\ell\tautau$ channel) 
+and \WZ+jets %($\ell\ell\mutau$ and $\ell\ell\etau$ channels) 
+events, with at least one misidentified lepton, are estimated from control regions in data.
+
+For signal extraction, the mass of the A boson $m_A$, reconstructed by combining the
+4-vector of the \PZ candidate with the 4-vector of the \Ph -candidate,as obtained by using the 
+\texttt{SVFit} algorithm.
+
+More detail on this analysis can be found in reference \cite{CMS-HIG-14-034}.
+
+
+
 
 \section{Results}
 \label{sec:hhh_results}
